# langchain-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/knowledge_base/: agentic_ai_overview.md  langgraph_concepts.md
docs/: architecture.html  multi-agent-rag-guide.html  multi-agent-rag-operations.html  operations-runbook.html  production-deployment-guide.html  production-grade-guide.html
langchain-module-1/: 1-langchain-intro.ipynb
src/agentic_research_agent/: __init__.py  cli.py  service_factory.py
src/agentic_research_agent/agents/: __init__.py  base.py  checkpointer.py  graph.py  prompts.py  service.py  state.py
src/agentic_research_agent/api/: __init__.py  app.py  dependencies.py  metrics.py  server.py
src/agentic_research_agent/config/: __init__.py  settings.py
src/agentic_research_agent/core/: __init__.py  exceptions.py  llm.py  logging.py  observability.py
src/agentic_research_agent/multiagent/: __init__.py  graph.py  prompts.py  service.py  state.py
src/agentic_research_agent/rag/: __init__.py  query_transform.py  reranker.py  retriever.py
src/agentic_research_agent/schemas/: __init__.py  models.py
src/agentic_research_agent/tools/: __init__.py  calculator.py  knowledge_base.py  web_search.py
tests/: conftest.py  test_api.py  test_calculator.py  test_checkpointer.py  test_graph.py  test_llm.py  test_multiagent.py  test_query_transform.py  test_retriever.py  test_service.py  test_settings.py
