[project]
name = "agentic-ai-learning"
version = "0.1.0"
description = "Enterprise-grade AI research assistant built with LangChain + LangGraph."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "ddgs>=9.0.0",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.4",
    "langchain-anthropic>=1.4.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-prebuilt>=1.1.0",
    "langsmith>=0.8.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.5.1",
    "tavily-python>=0.7.25",
    "tiktoken>=0.13.0",
    "typer>=0.15.0",
    "unstructured>=0.22.31",
    "wikipedia>=1.4.0",
]

[project.scripts]
research-agent = "agentic_research_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_research_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
# Notebooks under the learning modules are scratch space, not project code.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.13"
packages = ["agentic_research_agent"]
ignore_missing_imports = true
warn_unused_ignores = true
